adjusted altcoins pages

--- a/_includes/buychart.html
+++ b/_includes/buychart.html
@@ -8,7 +8,7 @@
  <tr>
   <td><a href="https://www.coinbase.com/join/53bc38a3b11f6623df000004"> Coinbase</a></td>
   <td>USA</td>
-  <td>1.49% - Bank </td>
+  <td>3.99% - Credit/Debit</td>
  </tr>
 
  <tr>
