--- a/_includes/step1.html
+++ b/_includes/step1.html
@@ -14,7 +14,7 @@ There are several exchanges to buy Bitcoin and Ethereum on.
 
  <h3>How to Buy Bitcoin on Coinbase </h3>
 
-<p>If you signup to <a href = "https://www.coinbase.com/join/53bc38a3b11f6623df000004">Coinbase</a> through this link, you will recieve an extra $10 worth of Bitcoin on your first $100+ order. </p>
+<p>If you signup to <a href = "https://www.coinbase.com/join/53bc38a3b11f6623df000004">Coinbase</a> through this link, you will receive an extra $10 worth of Bitcoin on your first $100+ order. </p>
 
 
 <p>After creating your Coinbase account, you will want to add a payment method. If you are trying to get the most bang out of your buck, I would reccomend using a bank transfer. If time is a concern, maybe go with credit or debit card, as there is instant delivery! </p>
