--- a/css/main.scss
+++ b/css/main.scss
@@ -77,13 +77,13 @@ sitemap:
 }
 
 .post-content a {
-	color: #050f19;
+	color: #3399ff;
 }
 
 .post-content a:hover {
-    color: #050f19 !important;
+    color: #3399ff !important;
     text-decoration: none !important;
-    border-bottom: 2px solid #050f19;
+    border-bottom: 2px solid #3399ff;
 }
 
 .site-header .site-nav li {
@@ -98,7 +98,7 @@ sitemap:
 
 .call-out {
     padding: 1% 15% !important;
-    background-color: #050f19;
+    background-color: #3399ff;
 }
 
 .internal-menu {
@@ -108,7 +108,7 @@ sitemap:
 		padding: 10px 20px 0 0;
 
 		a {
-			color: #050f19 !important;
+			color: #3399ff !important;
 		}
 	}
 }
