--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,10 @@
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+  <div id="google_translate_element"></div><script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement({pageLanguage: 'en', gaTrack: true, gaId: 'UA-112529143'}, 'google_translate_element');
+  }
+  </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112529143-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
