--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,7 @@
 			{% endfor %}
 			<!-- Social icons from Font Awesome, if enabled -->
 			{% include icons.html %}
+			{% include translator.html %}
 		</ul>
 	</nav>
 </header>
