--- a/_includes/translator.html
+++ b/_includes/translator.html
@@ -1,5 +1,8 @@
+
+<div align=right>
 <div id="google_translate_element"></div><script type="text/javascript">
 function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en', gaTrack: true, gaId: 'UA-112529143'}, 'google_translate_element');
 }
 </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</div>
